--- a/src/templates/altaPresupuestos.html
+++ b/src/templates/altaPresupuestos.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Presupuesto{% endblock %}
+{% block title %}PRESUPUESTO{% endblock %}
 
 {% block customCSS %}
 <style>
@@ -289,69 +289,71 @@
                                 <input type="text" style="display: none;" class="form-control form-control-sm" id="PROYECTO_ID" name="PROYECTO_ID">
 
                             </td>
-                            <th scope="row" style="text-align: left;">PRESUPUESTO CLIENTE:</th>
+                            <th scope="row" style="text-align: right;">PRESUPUESTO CLIENTE:</th>
                             <td>
-                                <input type="text" class="form-control currency-input borderless" name="PRESUPUESTO_CLIENTE" id="PRESUPUESTO_CLIENTE" placeholder="$0.00" readonly>
+                                <input type="text" class="form-control currency-input" name="PRESUPUESTO_CLIENTE" id="PRESUPUESTO_CLIENTE" readonly>
                             </td>
                             <td>
-                                <th scope="row">FALTA POR COBRAR:</th>
+                                <th scope="row" style="text-align: right;">FALTA POR COBRAR:</th>
                             <td>
-                                <input type="text" class="form-control currency-input borderless" name="FALTA_COBRAR" id="FALTA_COBRAR" placeholder="$0.00">
+                                <input type="text" class="form-control currency-input" name="FALTA_POR_COBRAR" id="FALTA_POR_COBRAR" value=0>
                             </td>
                             <td>
-                                <input type="text" class="form-control currency-input borderless" id="PORCENTAJE_POR_COBRAR" placeholder="%0" name="PORCENTAJE_POR_COBRAR" style="width: 50px;">
+                                <input type="text" class="form-control" id="PORCENTAJE_POR_COBRAR" name="PORCENTAJE_POR_COBRAR" style="width: 50px;" value=0>
                             </td>
-                            <th scope="row">FECHA INICIO:</th>
+                            <th scope="row" style="text-align: right;">FECHA INICIO:</th>
                             <td>
-                                <input type="date" name="FECHA_INICIO" class="form-control borderless" id="FECHA_INICIO">
-                            </td>
-                        </tr>
-                        <tr>
-                            <th scope="row">DIRECCIÓN:</th>
-                            <td>
-                                <input type="text" class="form-control borderless" id="DIRECCION" name="DIRECCION" value="Perisur, CDMX" readonly>
-                            </td>
-                            <th scope="row">PAGADO CLIENTE:</th>
-                            <td>
-                                <input type="text" class="form-control currency-input borderless" name="PAGADO_CLIENTE" id="PAGADO_CLIENTE" placeholder="$0.00" readonly>
-                            </td>
-                            <td>
-                                <input type="text" class="form-control currency-input borderless" id="PORCENTAJE_PAGADO_CLIENTE" placeholder="%0" name="PORCENTAJE_PAGADO_CLIENTE" style="width: 50px;">
-                            </td>
-                            <th scope="row">FALTA POR GASTAR:</th>
-                            <td>
-                                <input type="text" class="form-control currency-input borderless" name="FALTA_GASTAR"  id="FALTA_GASTAR" placeholder="$0.00">
-                            </td>
-                            <td>
-                                <input type="text" class="form-control currency-input borderless" id="PORCENTAJE_POR_GASTAR" placeholder="%0" name="PORCENTAJE_POR_GASTAR" style="width: 50px;">
-                            </td>
-                            <th scope="row">FECHA FIN:</th>
-                            <td>
-                                <input type="date" name="FECHA_FIN" class="form-control borderless" id="FECHA_FIN">
+                                <input type="date" name="FECHA_INICIO"  id="FECHA_INICIO" class="form-control">
                             </td>
                         </tr>
                         <tr>
-                            <th scope="row">DIRECTOR:</th>
+                            <th scope="row">DIRECCIÓN DE OBRA:</th>
                             <td>
-                                <input type="text" class="form-control borderless" id="DIRECTOR" name="DIRECTOR" value="Jose Miguel Gomez" readonly>
+                                <input type="text" class="form-control" id="DIRECCION" name="DIRECCION" readonly>
                             </td>
-                            <th scope="row">GASTADO REAL:</th>
+                            <th scope="row" style="text-align: right;">PAGADO CLIENTE:</th>
                             <td>
-                                <input type="text" class="form-control currency-input borderless" name="GASTADO_REAL" id="GASTADO_REAL" placeholder="$0.00">
-                            </td>
-                            <td>
-                                <input type="text" class="form-control currency-input borderless" name="PORCENTAJE_GASTADO" id="PORCENTAJE_GASTADO" placeholder="%0" name="PORCENTAJE_GASTADO" style="width: 50px;">
-                            </td>
-                            <th scope="row">STATUS OBRA:</th>
-                            <td>
-                                <input type="text" class="form-control currency-input borderless" id="ESTATUS_OBRA" name="ESTATUS_OBRA" placeholder="$0.00">
+                                <input type="text" class="form-control currency-input" name="PAGADO_CLIENTE" id="PAGADO_CLIENTE"  readonly>
                             </td>
                             <td>
-                                <input type="text" class="form-control currency-input borderless" id="PORCENTAJE_ESTADO" placeholder="%0" name="PORCENTAJE_ESTADO" style="width: 50px;">
+                                <input type="text" class="form-control" id="PORCENTAJE_PAGADO_CLIENTE" placeholder="%0" name="PORCENTAJE_PAGADO_CLIENTE" style="width: 50px;" value="{[presupuesto['pagado_cliente']}" readonly>
                             </td>
-                            <th scope="row">TOTAL SEMANAS:</th>
+                            <th scope="row" style="text-align: right;">FALTA POR GASTAR:</th>
                             <td>
-                                <input type="text" class="form-control currency-input borderless" style="text-align: center;" id="DIAS_TOTALES" name="DIAS_TOTALES">
+                                <input type="text" class="form-control currency-input" name="FALTA_POR_GASTAR"  id="FALTA_POR_GASTAR">
+                            </td>
+                            <td>
+                                <input type="text" class="form-control" id="PORCENTAJE_POR_GASTAR" value="0" name="PORCENTAJE_POR_GASTAR" style="width: 50px;">
+                            </td>
+                            <th scope="row" style="text-align: right;">FECHA FIN:</th>
+                            <td>
+                                <input type="date" name="FECHA_FIN" class="form-control" id="FECHA_FIN">
+                            </td>
+                        </tr>
+                        <tr>
+                            <th scope="row">DIRECTOR DE OBRA:</th>
+                            <td>
+                                <select  class="form-control" id="DIRECTOR" name="DIRECTOR">
+                                    <option value=1>SELECIONA UN DIRECTOR</option>
+                                </select>
+                            </td>
+                            <th scope="row" style="text-align: right;">GASTADO REAL:</th>
+                            <td>
+                                <input type="text" class="form-control currency-input" name="GASTADO_REAL" id="GASTADO_REAL">
+                            </td>
+                            <td>
+                                <input type="text" class="form-control" name="PORCENTAJE_GASTADO_REAL" id="PORCENTAJE_GASTADO_REAL"  value="0" style="width: 50px;" readonly>
+                            </td>
+                            <th scope="row" style="text-align: right;">ESTADO DE OBRA:</th>
+                            <td>
+                                <input type="text" class="form-control currency-input" id="ESTATUS_OBRA" name="ESTATUS_OBRA" readonly>
+                            </td>
+                            <td>
+                                
+                            </td>
+                            <th scope="row" style="text-align: right;">TOTAL SEMANAS:</th>
+                            <td>
+                                <input type="text" class="form-control" style="text-align: center;" id="DIAS_TOTALES" name="DIAS_TOTALES">
                             </td>
                         </tr>
                     </tbody>
@@ -466,26 +468,26 @@
                                 <tr>
                                    
                                     <td   colspan="3" class="text-end"><strong>% INDIRECTO:</strong></td>
-                                    <td><input type="number" name="porcentajeIndirecto" id="porcentajeIndirecto" min='0' class="form-control"
-                                            style="text-align: center;" placeholder="0"
-                                            onchange="calcularTotalConIndirecto()"></td>
+                                    <td><input type="number"  name="porcentajeIndirecto" id="porcentajeIndirecto" min='0' class="form-control"
+                                            style="text-align: center;width: 110px;" placeholder="0"
+                                            onchange="calcularTotalConIndirecto()" disabled></td>
                                     <td colspan="5"></td>
                                 </tr>
                                 <tr>
                                 
                                     <td  colspan="3" class="text-end"><strong>TOTAL INDIRECTO:</strong></td>
                                     <td><input type="text" id="totalIndirectoCliente" name="totalIndirectoCliente" class="form-control  currency-input"
-                                            placeholder="$0.00" readonly></td>
+                                            placeholder="$0.00" disabled></td>
                                     <td colspan="5"></td>
                                 </tr>
                                 <tr>
                                     <td colspan="3" class="text-end"><strong>TOTAL:</strong></td>
                                     <td><input type="text" id="totalCliente" name="totalCliente" class="form-control  currency-input"
-                                            placeholder="$0.00" readonly></td>
-                                    <td><input type="text" id="totalContratista" class="form-control  currency-input"
-                                            placeholder="$0.00" readonly></td>
-                                    <td><input type="text" id="totalDiferencia" class="form-control  currency-input"
-                                            placeholder="$0.00" readonly></td>
+                                            placeholder="$0.00" disabled></td>
+                                    <td><input type="text" id="totalContratista"  name="totalContratista" class="form-control  currency-input"
+                                            placeholder="$0.00" disabled></td>
+                                    <td><input type="text" id="totalDiferencia" name="totalDiferencia" class="form-control  currency-input"
+                                            placeholder="$0.00" disabled></td>
                                     <td colspan="3"></td>
                                 </tr>
                             </tfoot>
